--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # You must first activate a Billing Account here: https://platform.openai.com/account/billing/overview
 # Then get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY="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å"
+OPENAI_API_KEY=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å
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET="3c40e73491c0e1a7e7f1d4b73759592f"
